# Active

./: .gitignore
client/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
client/app/: ScreenManager.tsx  _layout.tsx  index.tsx  login.tsx  register.tsx
client/components/: ButtonBody.tsx  ButtonPrimary.tsx  ButtonSecondary.tsx  ConfirmationDialog.tsx  ErrorInformationDialog.tsx  ExerciseCard.tsx  MainView.tsx  SearchBar.tsx  TextInputComponent.tsx
client/contexts/: AuthContext.tsx  CreateWorkoutState.tsx  ExerciseSearchContext.tsx  ExerciseSearchState.tsx  ModalContext.tsx  (+3 more)
noxpor/: App.tsx  app.json  package-lock.json  package.json
server/: Cargo.toml
server/migrations/2023-06-18-212213_create_user/: up.sql
server/migrations/2023-07-06-060841_create_exercises/: down.sql  up.sql
server/migrations/2023-07-06-121441_fix_exercise/: down.sql  up.sql
server/migrations/2023-07-06-221507_exercises_notnullable/: down.sql  up.sql
server/migrations/2023-07-09-094819_create_workout/: down.sql  up.sql
server/migrations/2023-10-03-175946_user_google_auth/: down.sql  up.sql
server/migrations/2023-10-05-192731_make_gid_unique/: down.sql  up.sql
server/src/: lib.rs  main.rs  schema.rs
server/src/handlers/: exercise_handler.rs  google_handler.rs  jwt_handler.rs  mod.rs  paginating.rs  user_handlers.rs  workout_handler.rs
server/src/middlewares/: auth_middleware.rs
server/src/models/: exercise_models.rs  mod.rs  user_models.rs  workout_models.rs
server/src/routes/: exercise_routes.rs  mod.rs  user_routes.rs  workout_routes.rs
(+65 files in other folders)
