[package]
name = "trainingapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4"}
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
env_logger = "0.9.0"
uuid = {version = "1.3.4", features=["serde", "v4"]}
chrono = {version = "0.4.26", features = ["serde"]}
serde = {version = "1.0.164", features = ["derive"]}
jsonwebtoken = "8.3.0"
scrypt = "0.11.0"
derive_more = "0.99.17"
actix-cors = "0.6.4"
reqwest = {version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"